--- a/source/css/variables.scss
+++ b/source/css/variables.scss
@@ -16,7 +16,8 @@ $basic-light-gray: #6f6f6f;
 $basic-lighter-gray: #b0b0b0;
 
 $bg-light-gray: #f9f9f9;
-$decor-light-gray: #ececec;
+$decor-dark-red: #87060D;
+
 $decor-semi-light-gray: #c6c6c6;
 $accent-light-mint: #63d1bb;
 $accent-dark-mint: #56c3b2;
