--- a/source/css/fonts.scss
+++ b/source/css/fonts.scss
@@ -3,9 +3,9 @@
   font-weight: 400;
   font-style: normal;
 
-  font-display: swap;
+  /* font-display: swap; */
 
-  src: local('Gotham Pro'), local('GothamPro'), url('../fonts/GothamPro.woff') format('woff'),
+  src: url('../fonts/GothamPro.woff') format('woff'),
     url('../fonts/GothamPro.eot?#iefix') format('embedded-opentype'),
     url('../fonts/GothamPro.ttf') format('truetype');
 }
@@ -15,9 +15,9 @@
   font-weight: 700;
   font-style: normal;
 
-  font-display: swap;
+  /* font-display: swap; */
 
-  src: local('Gotham Pro Bold'), local('GothamPro-Bold'), url('../fonts/GothamPro-Bold.woff') format('woff'),
+  src: url('../fonts/GothamPro-Bold.woff') format('woff'),
     url('../fonts/GothamPro-Bold.eot?#iefix') format('embedded-opentype'),
     url('../fonts/GothamPro-Bold.ttf') format('truetype');
 }
@@ -27,8 +27,7 @@
   font-weight: 400;
   font-style: italic;
 
-  src: local('Gotham Pro Italic'), local('../fonts/GothamPro-Italic'),
-    url('../fonts/GothamPro-Italic.woff') format('woff'),
+  src: url('../fonts/GothamPro-Italic.woff') format('woff'),
     url('../fonts/GothamPro-Italic.eot?#iefix') format('embedded-opentype'),
     url('../fonts/GothamPro-Italic.ttf') format('truetype');
 }
@@ -38,10 +37,9 @@
   font-weight: 500;
   font-style: normal;
 
-  font-display: swap;
+  /* font-display: swap; */
 
-  src: local('Gotham Pro Medium'), local('../fonts/GothamPro-Medium'),
-    url('../fonts/GothamPro-Medium.woff') format('woff'),
+  src: url('../fonts/GothamPro-Medium.woff') format('woff'),
     url('../fonts/GothamPro-Medium.eot?#iefix') format('embedded-opentype'),
     url('../fonts/GothamPro-Medium.ttf') format('truetype');
 }
@@ -51,10 +49,9 @@
   font-weight: 900;
   font-style: normal;
 
-  font-display: swap;
+  /* font-display: swap; */
 
-  src: local('Gotham Pro Black'), local('../fonts/GothamPro-Black'),
-    url('../fonts/GothamPro-Black.woff') format('woff'),
+  src: url('../fonts/GothamPro-Black.woff') format('woff'),
     url('../fonts/GothamPro-Black.eot?#iefix') format('embedded-opentype'),
     url('../fonts/GothamPro-Black.ttf') format('truetype');
 }
@@ -64,10 +61,9 @@
   font-weight: 300;
   font-style: normal;
 
-  font-display: swap;
+  /* font-display: swap; */
 
-  src: local('Gotham Pro Light'), local('../fonts/GothamPro-Light'),
-    url('../fonts/GothamPro-Light.woff') format('woff'),
+  src: url('../fonts/GothamPro-Light.woff') format('woff'),
     url('../fonts/GothamPro-Light.eot?#iefix') format('embedded-opentype'),
     url('../fonts/GothamPro-Light.ttf') format('truetype');
 }
