--- a/source/css/common.scss
+++ b/source/css/common.scss
@@ -20,7 +20,17 @@
 
   @media (min-width: $tablet-width) {
     width: $tablet-width;
-    padding: 0 30px;
+    padding: 0 15px;
+  }
+
+  @media (min-width: 1240px) {
+    width: 1240px;
+    padding: 0 15px;
+  }
+
+  @media (min-width: 1440px) {
+    width: 1440px;
+    padding: 0 15px;
   }
 
   @media (min-width: $desktop-width) {
