--- a/source/css/fonts.scss
+++ b/source/css/fonts.scss
@@ -1,69 +1,52 @@
 @font-face {
   font-family: 'Gotham Pro';
-  font-weight: 400;
-  font-style: normal;
-
-  /* font-display: swap; */
-
-  src: url('../fonts/GothamPro.woff') format('woff'),
+  src: url('../fonts/GothamPro.woff2') format('woff2'),
+    url('../fonts/GothamPro.woff') format('woff'),
     url('../fonts/GothamPro.eot?#iefix') format('embedded-opentype'),
     url('../fonts/GothamPro.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
 }
 
 @font-face {
   font-family: 'Gotham Pro';
-  font-weight: 700;
-  font-style: normal;
-
-  /* font-display: swap; */
-
-  src: url('../fonts/GothamPro-Bold.woff') format('woff'),
+  src: url('../fonts/GothamPro-Bold.woff2') format('woff2'),
+    url('../fonts/GothamPro-Bold.woff') format('woff'),
     url('../fonts/GothamPro-Bold.eot?#iefix') format('embedded-opentype'),
     url('../fonts/GothamPro-Bold.ttf') format('truetype');
-}
-
-@font-face {
-  font-family: 'Gotham Pro';
-  font-weight: 400;
-  font-style: italic;
-
-  src: url('../fonts/GothamPro-Italic.woff') format('woff'),
-    url('../fonts/GothamPro-Italic.eot?#iefix') format('embedded-opentype'),
-    url('../fonts/GothamPro-Italic.ttf') format('truetype');
-}
-
-@font-face {
-  font-family: 'Gotham Pro';
-  font-weight: 500;
+  font-weight: 700;
   font-style: normal;
-
-  /* font-display: swap; */
-
-  src: url('../fonts/GothamPro-Medium.woff') format('woff'),
-    url('../fonts/GothamPro-Medium.eot?#iefix') format('embedded-opentype'),
-    url('../fonts/GothamPro-Medium.ttf') format('truetype');
 }
 
 @font-face {
   font-family: 'Gotham Pro';
-  font-weight: 900;
-  font-style: normal;
 
-  /* font-display: swap; */
-
-  src: url('../fonts/GothamPro-Black.woff') format('woff'),
-    url('../fonts/GothamPro-Black.eot?#iefix') format('embedded-opentype'),
-    url('../fonts/GothamPro-Black.ttf') format('truetype');
-}
-
-@font-face {
-  font-family: 'Gotham Pro';
-  font-weight: 300;
-  font-style: normal;
-
-  /* font-display: swap; */
-
-  src: url('../fonts/GothamPro-Light.woff') format('woff'),
+  src: url('../fonts/GothamPro-Light.woff2') format('woff2'),
+    url('../fonts/GothamPro-Light.woff') format('woff'),
     url('../fonts/GothamPro-Light.eot?#iefix') format('embedded-opentype'),
     url('../fonts/GothamPro-Light.ttf') format('truetype');
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Gotham Pro';
+
+  src: url('../fonts/GothamPro-Italic.woff2') format('woff2'),
+    url('../fonts/GothamPro-Italic.woff') format('woff'),
+    url('../fonts/GothamPro-Italic.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/GothamPro-Italic.ttf') format('truetype');
+  font-weight: 400;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Gotham Pro';
+
+  src: url('../fonts/GothamPro-Medium.woff2') format('woff2'),
+    url('../fonts/GothamPro-Medium.woff') format('woff'),
+    url('../fonts/GothamPro-Medium.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/GothamPro-Medium.ttf') format('truetype');
+  font-weight: 500;
+  font-style: normal;
 }
