--- a/source/css/fonts.scss
+++ b/source/css/fonts.scss
@@ -1,6 +1,8 @@
 @font-face {
   font-family: 'Gotham Pro';
-  src: url('../fonts/GothamPro.woff2') format('woff2'),
+  src: url('../fonts/GothamPro.eot');
+  src: local('Gotham Pro'), local('GothamPro'), 
+    url('../fonts/GothamPro.woff2') format('woff2'),
     url('../fonts/GothamPro.woff') format('woff'),
     url('../fonts/GothamPro.eot?#iefix') format('embedded-opentype'),
     url('../fonts/GothamPro.ttf') format('truetype');
@@ -10,7 +12,9 @@
 
 @font-face {
   font-family: 'Gotham Pro';
-  src: url('../fonts/GothamPro-Bold.woff2') format('woff2'),
+  src: url('../fonts/GothamPro-Bold.eot');
+  src: local('Gotham Pro Bold'), local('GothamPro-Bold'),
+    url('../fonts/GothamPro-Bold.woff2') format('woff2'),
     url('../fonts/GothamPro-Bold.woff') format('woff'),
     url('../fonts/GothamPro-Bold.eot?#iefix') format('embedded-opentype'),
     url('../fonts/GothamPro-Bold.ttf') format('truetype');
@@ -20,8 +24,9 @@
 
 @font-face {
   font-family: 'Gotham Pro';
-
-  src: url('../fonts/GothamPro-Light.woff2') format('woff2'),
+  src: url('../fonts/GothamPro-Light.eot');
+  src: local('Gotham Pro Light'), local('GothamPro-Light'),
+    url('../fonts/GothamPro-Light.woff2') format('woff2'),
     url('../fonts/GothamPro-Light.woff') format('woff'),
     url('../fonts/GothamPro-Light.eot?#iefix') format('embedded-opentype'),
     url('../fonts/GothamPro-Light.ttf') format('truetype');
@@ -31,8 +36,9 @@
 
 @font-face {
   font-family: 'Gotham Pro';
-
-  src: url('../fonts/GothamPro-Italic.woff2') format('woff2'),
+  src: url('../fonts/GothamPro-Italic.eot');
+  src: local('Gotham Pro Italic'), local('GothamPro-Italic'),
+    url('../fonts/GothamPro-Italic.woff2') format('woff2'),
     url('../fonts/GothamPro-Italic.woff') format('woff'),
     url('../fonts/GothamPro-Italic.eot?#iefix') format('embedded-opentype'),
     url('../fonts/GothamPro-Italic.ttf') format('truetype');
@@ -42,8 +48,9 @@
 
 @font-face {
   font-family: 'Gotham Pro';
-
-  src: url('../fonts/GothamPro-Medium.woff2') format('woff2'),
+  src: url('../fonts/GothamPro-Medium.eot');
+  src: local('Gotham Pro Medium'), local('GothamPro-Medium'),
+    url('../fonts/GothamPro-Medium.woff2') format('woff2'),
     url('../fonts/GothamPro-Medium.woff') format('woff'),
     url('../fonts/GothamPro-Medium.eot?#iefix') format('embedded-opentype'),
     url('../fonts/GothamPro-Medium.ttf') format('truetype');
